--- a/media/css/main.less
+++ b/media/css/main.less
@@ -173,6 +173,18 @@ body {
             }
             blockquote {
               margin: 1em 0;
+              code {
+                border: none;
+                border-radius: 2px;
+                border-top-left-radius: 0;
+                border-bottom-left-radius: 0;
+              }
+              code.date {
+                border-left: 2px solid #FA0;
+              }
+              code.tag {
+                border-left: 2px solid #888;
+              }
             }
             img {
               padding: 4px;
