--- a/_includes/post-preview.html
+++ b/_includes/post-preview.html
@@ -1,8 +1,8 @@
 <div class="post-preview">
   <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
   <blockquote>
-    <span class="date"></span> posted on: <code>{{ post.date | date_to_string }}</code>;
-    <span class="tags"></span> tags: {% for tag in post.tags %}<code>{{ tag }}</code>{% if forloop.last %};{% else %}, {% endif %}{% endfor %}
+    <span class="date"></span> posted on: <code class="date">{{ post.date | date_to_string }}</code>;
+    <span class="tags"></span> tags: {% for tag in post.tags %}<code class="tag">{{ tag }}</code>{% if forloop.last %};{% else %}, {% endif %}{% endfor %}
   </blockquote>
   <blockquote class="summary">{{ post.summary | textilize }}</blockquote>
 </div>
