--- a/media/css/main.less
+++ b/media/css/main.less
@@ -201,14 +201,14 @@ body {
               font-size: 12px;
               padding: 13px 2px 0 30px;
             }
-            .date {
+            span.date {
               background: url(/media/images/skin/icons/date.png) no-repeat scroll left top transparent;
               display: inline-block;
               height: 16px;
               margin: 0 -2px -4px 2px;
               width: 16px;
             }
-            .tags {
+            span.tags {
               background: url(/media/images/skin/icons/tag.png) no-repeat scroll left top transparent;
               display: inline-block;
               height: 16px;
