--- a/media/css/main.css
+++ b/media/css/main.css
@@ -375,14 +375,14 @@ body > .wrapper > .container > .content .pad .main .loader {
   font-size: 12px;
   padding: 13px 2px 0 30px;
 }
-body > .wrapper > .container > .content .pad .main .date {
+body > .wrapper > .container > .content .pad .main span.date {
   background: url(/media/images/skin/icons/date.png) no-repeat scroll left top transparent;
   display: inline-block;
   height: 16px;
   margin: 0 -2px -4px 2px;
   width: 16px;
 }
-body > .wrapper > .container > .content .pad .main .tags {
+body > .wrapper > .container > .content .pad .main span.tags {
   background: url(/media/images/skin/icons/tag.png) no-repeat scroll left top transparent;
   display: inline-block;
   height: 16px;
