--- a/media/css/main.css
+++ b/media/css/main.css
@@ -351,8 +351,8 @@ body > .wrapper > .container > .content .pad .main blockquote {
 body > .wrapper > .container > .content .pad .main blockquote code {
   border: none;
   border-radius: 2px;
-  border-top-left-radius: 0;
-  border-bottom-left-radius: 0;
+  border-top-left-radius: 1px;
+  border-bottom-left-radius: 1px;
 }
 body > .wrapper > .container > .content .pad .main blockquote code.date {
   border-left: 2px solid #FA0;
