--- a/media/css/main.less
+++ b/media/css/main.less
@@ -176,8 +176,8 @@ body {
               code {
                 border: none;
                 border-radius: 2px;
-                border-top-left-radius: 0;
-                border-bottom-left-radius: 0;
+                border-top-left-radius: 1px;
+                border-bottom-left-radius: 1px;
               }
               code.date {
                 border-left: 2px solid #FA0;
