--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -27,6 +27,9 @@
             </div>
             <div class="unit size1of5 lastUnit">
               <div class="sidebar">
+                <div class="avatar" style="display: none;">
+                  <div class="header">me@aatiis.me</div>
+                </div>
                 <div class="j-archives archives">
                   <div class="header">Archives</div>
                   <div class="j-loader loader">Loading archives...</div>
