--- a/media/css/main.less
+++ b/media/css/main.less
@@ -250,6 +250,15 @@ body {
               padding: 3px 0 3px 25px;
             }
           }
+          > .avatar {
+            height: 145px;
+            position: relative;
+            > img {
+              position: absolute;
+              left: -50px;
+              top: -9px;
+            }
+          }
           > .archives {
             > .header {
               background: url(/media/images/skin/icons/archives.png) no-repeat scroll 5px 5px transparent;
