avatar box update

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -29,7 +29,7 @@
               <div class="sidebar">
                 <div class="avatar">
                   <img src="/media/images/skin/avatar-clippy.png"/>
-                  <div class="header">This is me...</div>
+                  <div class="header">Hello, reader.</div>
                 </div>
                 <div class="j-archives archives">
                   <div class="header">Archives</div>
