--- a/media/css/main.less
+++ b/media/css/main.less
@@ -253,6 +253,9 @@ body {
           > .avatar {
             height: 145px;
             position: relative;
+            > .header {
+              text-align: right;
+            }
             > img {
               position: absolute;
               left: -50px;
