avatar box update

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -30,6 +30,7 @@
                 <div class="avatar">
                   <img src="/media/images/skin/avatar-clippy.png"/>
                   <div class="header">Hello, reader.</div>
+                  <div class="bio">My name is<br/> <a href="mailto:me@aatiis.me">Attila Ol&aacute;h</a>.<br/>I'm currently a<br/> <a href="http://www.python.org/">Python</a> coder<br/> at <a href="http://www.vemble.com/">Vemble B.V.</a>.</div>
                 </div>
                 <div class="j-archives archives">
                   <div class="header">Archives</div>
