--- a/media/css/main.less
+++ b/media/css/main.less
@@ -253,8 +253,11 @@ body {
           > .avatar {
             height: 145px;
             position: relative;
+            text-align: right;
             > .header {
-              text-align: right;
+            }
+            > .bio {
+              padding-right: 3px;
             }
             > img {
               position: absolute;
