--- a/media/css/main.less
+++ b/media/css/main.less
@@ -251,13 +251,13 @@ body {
             }
           }
           > .avatar {
-            height: 145px;
             position: relative;
             text-align: right;
-            > .header {
-            }
             > .bio {
               padding-right: 3px;
+              > a.me {
+                font-weight: bold;
+              }
             }
             > img {
               position: absolute;
