avatar box update

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -31,9 +31,13 @@
                   <img src="/media/images/skin/avatar-clippy.png"/>
                   <div class="header">Hello, reader.</div>
                   <div class="bio">
-                    My name is<br/> <a href="mailto:me@aatiis.me" rel="me" class="me">Attila Ol&aacute;h</a><br/>
-                    I'm currently a<br/> <a href="http://www.python.org/">Python</a> coder<br/> at <a href="http://www.vemble.com/">Vemble B.V.</a><br/>
-                    and founder at <a href="http://auir.eu/">Aiur d.o.o.</a>, Subotica, Serbia
+                    My name is<br/>
+                    <a href="mailto:me@aatiis.me" rel="me" class="me">Attila Ol&aacute;h</a><br/>
+                    I'm currently a<br/>
+                    <strong>python coder</strong><br/>
+                    at <a href="http://www.vemble.com/">Vemble B.V.</a><br/>
+                    and <strong>founder</strong> at <br/>
+                    <a href="http://auir.eu/">Aiur d.o.o.</a>, Subotica, Serbia
                   </div>
                 </div>
                 <div class="j-archives archives">
