--- a/media/css/main.less
+++ b/media/css/main.less
@@ -254,7 +254,7 @@ body {
             position: relative;
             text-align: right;
             > .bio {
-              padding-right: 3px;
+              padding-right: 0 5px 5px;
               > a.me {
                 font-weight: bold;
               }
