avatar box update

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -28,16 +28,16 @@
             <div class="unit size1of5 lastUnit">
               <div class="sidebar">
                 <div class="avatar">
-                  <img src="/media/images/skin/avatar-clippy.png"/>
+                  <img src="/media/images/skin/avatar-clippy.png" alt="This is me."/>
                   <div class="header">Hello, reader.</div>
                   <div class="bio">
-                    My name is<br/>
-                    <a href="mailto:me@aatiis.me" rel="me" class="me">Attila Ol&aacute;h</a><br/>
-                    I'm currently a<br/>
-                    <strong>python coder</strong><br/>
-                    at <a href="http://www.vemble.com/">Vemble B.V.</a><br/>
-                    and <strong>founder</strong> at<br/>
-                    <a href="http://auir.eu/">Aiur d.o.o.</a>, Subotica, Serbia
+                    <span>My name is<br/></span>
+                    <span><a href="mailto:me@aatiis.me" rel="me" class="me">Attila Ol&aacute;h</a><br/></span>
+                    <span>I'm currently a<br/></span>
+                    <span><strong>python coder</strong><br/></span>
+                    <span>at <a href="http://www.vemble.com/">Vemble B.V.</a><br/></span>
+                    <span>and <strong>founder</strong><br/></span>
+                    <span>of <a href="http://auir.eu/">Aiur d.o.o.</a> Serbia</span>
                   </div>
                 </div>
                 <div class="j-archives archives">
@@ -97,9 +97,9 @@
           <li><a href="http://github.com/aatiis" rel="me">me @ github</a></li>
           <li><a href="mailto:me@aatiis.me" rel="me">contact</a></li>
         </ul>
-        Pages created using <a href="http://github.com/mojombo/jekyll">jekyll</a>.
-        Styled using <a href="http://github.com/cloudhead/less.js">less.js</a> &amp; <a href="http://wiki.github.com/stubbornella/oocss/grids">oocss grids</a>.
-        Hosted by <a href="http://github.com/">GitHub</a>.
+        <span>Pages created using <a href="http://github.com/mojombo/jekyll">jekyll</a>.</span>
+        <span>Styled using <a href="http://github.com/cloudhead/less.js">less.js</a> &amp; <a href="http://wiki.github.com/stubbornella/oocss/grids">oocss grids</a>.</span>
+        <span>Hosted by <a href="http://github.com/">GitHub</a>.</span>
       </div>
     </div>
   </body>
