--- a/media/css/main.less
+++ b/media/css/main.less
@@ -255,13 +255,13 @@ body {
             text-align: right;
             > .bio {
               padding: 0 5px 5px;
-              > a.me {
+              a.me {
                 font-weight: bold;
               }
             }
             > img {
               position: absolute;
-              left: -50px;
+              right: 108px;
               top: -9px;
             }
           }
