added westartup link

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -81,6 +81,7 @@
                     <li class="tw"><a rel="me" href="http://twitter.com/attilaolah" title="Twitter"></a></li>
                     <li class="wk"><a rel="me" href="http://en.wikipedia.org/wiki/User:Attila_Ol%C3%A1h" title="Wikipedia (English)"></a></li>
                     <li class="wk"><a rel="me" href="http://hu.wikipedia.org/wiki/Szerkeszt%C5%91:Attila_Ol%C3%A1h" title="Wikip&eacute;dia (Hungarian)"></a></li>
+                    <li class="ws"><a rel="me" href="http://www.westartup.eu/pg/profile/aatiis" title="westartup"></a></li>
                     <li class="yt"><a rel="me" href="http://youtube.com/user/DarckDesign" title="YouTube"></a></li>
                   </ul>
                   <div class="clear"></div>
