--- a/media/css/main.css
+++ b/media/css/main.css
@@ -600,6 +600,12 @@ body > .wrapper > .container > .content .sidebar > .me > ul > .gr {
 body > .wrapper > .container > .content .sidebar > .me > ul > .gr:hover, body > .wrapper > .container > .content .sidebar > .me > ul .gr:active {
   background: url(/media/images/skin/social.png) no-repeat scroll -336px top transparent;
 }
+body > .wrapper > .container > .content .sidebar > .me > ul > .ws {
+  background: url(/media/images/skin/social.png) no-repeat scroll -352px -16px transparent;
+}
+body > .wrapper > .container > .content .sidebar > .me > ul > .gr:hover, body > .wrapper > .container > .content .sidebar > .me > ul .gr:active {
+  background: url(/media/images/skin/social.png) no-repeat scroll -352px top transparent;
+}
 body > .wrapper > .container > .content .sidebar > .me > ul > li {
   float: left;
   list-style-type: none;
