--- a/media/css/main.less
+++ b/media/css/main.less
@@ -332,7 +332,7 @@ body {
               > .os { ._i(19); } > .os:hover, .os:active { ._h(19); }
               > .dl { ._i(20); } > .dl:hover, .dl:active { ._h(20); }
               > .gr { ._i(21); } > .gr:hover, .gr:active { ._h(21); }
-              > .ws { ._i(22); } > .gr:hover, .gr:active { ._h(22); }
+              > .ws { ._i(22); } > .ws:hover, .ws:active { ._h(22); }
               > li {
                 float: left;
                 list-style-type: none;
