--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -59,6 +59,7 @@
                   <div class="header">Me on the web</div>
                   <ul>
                     <li class="bb"><a rel="me" href="http://bitbucket.org/attilaolah" title="BitBucket"></a></li>
+                    <li class="ca"><a rel="me" href="http://www.coactivate.org/people/aatiis" title="CoActivate"></a></li>
                     <li class="di"><a rel="me" href="http://digg.com/aatiis" title="Digg"></a></li>
                     <li class="dl"><a rel="me" href="http://www.delicious.com/aatiis" title="Delicious"></a></li>
                     <li class="dm"><a rel="me" href="http://www.dailymotion.com/attilaolah" title="Dailymotion"></a></li>
