--- a/media/css/main.less
+++ b/media/css/main.less
@@ -333,6 +333,7 @@ body {
               > .dl { ._i(20); } > .dl:hover, .dl:active { ._h(20); }
               > .gr { ._i(21); } > .gr:hover, .gr:active { ._h(21); }
               > .ws { ._i(22); } > .ws:hover, .ws:active { ._h(22); }
+              > .ca { ._i(23); } > .ca:hover, .ca:active { ._h(23); }
               > li {
                 float: left;
                 list-style-type: none;
