image div padding

--- a/media/css/main.less
+++ b/media/css/main.less
@@ -186,6 +186,9 @@ body {
                 border-left: 2px solid #888;
               }
             }
+            .img {
+              padding: 5px;
+            }
             img {
               padding: 4px;
               border: 1px solid white;
