--- a/media/css/main.css
+++ b/media/css/main.css
@@ -360,6 +360,9 @@ body > .wrapper > .container > .content .pad .main blockquote code.date {
 body > .wrapper > .container > .content .pad .main blockquote code.tag {
   border-left: 2px solid #888;
 }
+body > .wrapper > .container > .content .pad .main .img {
+  padding: 5px;
+}
 body > .wrapper > .container > .content .pad .main img {
   padding: 4px;
   border: 1px solid white;
