--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -65,6 +65,7 @@
                     <li class="dm"><a rel="me" href="http://www.dailymotion.com/attilaolah" title="Dailymotion"></a></li>
                     <li class="el"><a rel="me" href="http://www.elance.com/s/attilaolah" title="Elance"></a></li>
                     <li class="fb"><a rel="me" href="http://www.facebook.com/attilaolah" title="Facebook"></a></li>
+                    <li class="fs"><a rel="me" href="http://foursquare.com/attilaolah" title="foursquare"></a></li>
                     <li class="gh"><a rel="me" href="http://github.com/aatiis" title="GitHub"></a></li>
                     <li class="go"><a rel="me" href="http://www.google.com/profiles/attilaolah" title="Google"></a></li>
                     <li class="gr"><a rel="me" href="http://gravatar.com/aatiisme" title="Gravatar"></a></li>
