--- a/media/css/main.less
+++ b/media/css/main.less
@@ -337,6 +337,7 @@ body {
               > .gr { ._i(21); } > .gr:hover, .gr:active { ._h(21); }
               > .ws { ._i(22); } > .ws:hover, .ws:active { ._h(22); }
               > .ca { ._i(23); } > .ca:hover, .ca:active { ._h(23); }
+              > .fs { ._i(24); } > .fs:hover, .fs:active { ._h(24); }
               > li {
                 float: left;
                 list-style-type: none;
