--- a/media/css/main.less
+++ b/media/css/main.less
@@ -338,6 +338,7 @@ body {
               > .ws { ._i(22); } > .ws:hover, .ws:active { ._h(22); }
               > .ca { ._i(23); } > .ca:hover, .ca:active { ._h(23); }
               > .fs { ._i(24); } > .fs:hover, .fs:active { ._h(24); }
+              > .xi { ._i(25); } > .xi:hover, .xi:active { ._h(25); }
               > li {
                 float: left;
                 list-style-type: none;
