--- a/media/css/main.css
+++ b/media/css/main.css
@@ -621,6 +621,12 @@ body > .wrapper > .container > .content .sidebar > .me > ul > .fs {
 body > .wrapper > .container > .content .sidebar > .me > ul > .fs:hover, body > .wrapper > .container > .content .sidebar > .me > ul .fs:active {
   background: url(/media/images/skin/social.png) no-repeat scroll -384px top transparent;
 }
+body > .wrapper > .container > .content .sidebar > .me > ul > .xi {
+  background: url(/media/images/skin/social.png) no-repeat scroll -400px -16px transparent;
+}
+body > .wrapper > .container > .content .sidebar > .me > ul > .xi:hover, body > .wrapper > .container > .content .sidebar > .me > ul .xi:active {
+  background: url(/media/images/skin/social.png) no-repeat scroll -400px top transparent;
+}
 body > .wrapper > .container > .content .sidebar > .me > ul > li {
   float: left;
   list-style-type: none;
