--- a/media/css/main.less
+++ b/media/css/main.less
@@ -339,6 +339,7 @@ body {
               > .ca { ._i(23); } > .ca:hover, .ca:active { ._h(23); }
               > .fs { ._i(24); } > .fs:hover, .fs:active { ._h(24); }
               > .xi { ._i(25); } > .xi:hover, .xi:active { ._h(25); }
+              > .or { ._i(26); } > .or:hover, .or:active { ._h(26); }
               > li {
                 float: left;
                 list-style-type: none;
