--- a/media/css/main.less
+++ b/media/css/main.less
@@ -305,6 +305,7 @@ body {
             > ul {
               margin: 0 2px;
               padding: 5px 0 5px 5px;
+              text-align: center;
               ._i(@value) {
                 @lpad: @value * 16;
                 background: e(%('url(/media/images/skin/social.png) no-repeat scroll -%spx -16px transparent', @lpad));
@@ -341,9 +342,9 @@ body {
               > .xi { ._i(25); } > .xi:hover, .xi:active { ._h(25); }
               > .or { ._i(26); } > .or:hover, .or:active { ._h(26); }
               > li {
-                float: left;
+                display: inline-block;
                 list-style-type: none;
-                margin: 5px;
+                margin: 2px;
                 a {
                   display: block;
                   height: 16px;
