--- a/media/css/main.css
+++ b/media/css/main.css
@@ -646,6 +646,8 @@ body > .wrapper > .container > .content .sidebar > .me > ul > li {
   -moz-transition-property: opacity;
   -moz-transition-diration: 1s;
   -moz-transition-timing-function: ease-in-out;
+  -o-transition-property: opacity;
+  -o-transition-diration: 1s;
 }
 body > .wrapper > .container > .content .sidebar > .me > ul > li a {
   display: block;
@@ -656,6 +658,14 @@ body > .wrapper > .container > .content .sidebar > .me > ul > li a {
 body > .wrapper > .container > .content .sidebar > .me > ul > li:hover, body > .wrapper > .container > .content .sidebar > .me > ul li:active {
   opacity: 1;
   filter: alpha(opacity=100);
+  -webkit-transition-property: opacity;
+  -webkit-transition-duration: 1s;
+  -webkit-transition-timing-function: ease-in-out;
+  -moz-transition-property: opacity;
+  -moz-transition-diration: 1s;
+  -moz-transition-timing-function: ease-in-out;
+  -o-transition-property: opacity;
+  -o-transition-diration: 1s;
 }
 body > .wrapper .footer {
   background: url(/media/images/skin/footer-pattern.png) repeat scroll left top #331100;
