--- a/media/css/main.less
+++ b/media/css/main.less
@@ -352,10 +352,10 @@ body {
                 -webkit-transition-duration: 1s;
                 -webkit-transition-timing-function: ease-in-out;
                 -moz-transition-property: opacity;
-                -moz-transition-diration: 1s;
+                -moz-transition-duration: 1s;
                 -moz-transition-timing-function: ease-in-out;
                 -o-transition-property: opacity;
-                -o-transition-diration: 1s;
+                -o-transition-duration: 1s;
                 a {
                   display: block;
                   height: 16px;
@@ -371,10 +371,10 @@ body {
                 -webkit-transition-duration: 1s;
                 -webkit-transition-timing-function: ease-in-out;
                 -moz-transition-property: opacity;
-                -moz-transition-diration: 1s;
+                -moz-transition-duration: 1s;
                 -moz-transition-timing-function: ease-in-out;
                 -o-transition-property: opacity;
-                -o-transition-diration: 1s;
+                -o-transition-duration: 1s;
               }
             }
           }
