added link to identi.ca

--- a/_includes/links-me.html
+++ b/_includes/links-me.html
@@ -11,6 +11,7 @@
   <li class="go"><a rel="me" href="http://www.google.com/profiles/attilaolah" title="Google"></a></li>
   <li class="gr"><a rel="me" href="http://gravatar.com/aatiisme" title="Gravatar"></a></li>
   <li class="ic"><a rel="me" href="http://www.icq.com/people/153505311" title="ICQ"></a></li>
+  <li class="id"><a rel="me" href="http://identi.ca/user/125831" title="Identi.ca"></a></li>
   <li class="in"><a rel="me" href="http://rs.linkedin.com/in/attilaolah" title="LinkedIn"></a></li>
   <li class="lf"><a rel="me" href="http://www.last.fm/user/attilaolah" title="Last.fm"></a></li>
   <li class="mi"><a rel="me" href="http://www.mixx.com/users/aatiis" title="Mixx"></a></li>
