--- a/media/css/main.less
+++ b/media/css/main.less
@@ -341,6 +341,7 @@ body {
               > .fs { ._i(24); } > .fs:hover, .fs:active { ._h(24); }
               > .xi { ._i(25); } > .xi:hover, .xi:active { ._h(25); }
               > .or { ._i(26); } > .or:hover, .or:active { ._h(26); }
+              > .id { ._i(27); } > .id:hover, .id:active { ._h(27); }
               > li {
                 display: inline-block;
                 list-style-type: none;
