fixed a buggy link

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -37,7 +37,7 @@
                     <span><strong>python coder</strong><br/></span>
                     <span>at <a href="http://www.vemble.com/">Vemble B.V.</a><br/></span>
                     <span>and <strong>founder</strong><br/></span>
-                    <span>of <a href="http://auir.eu/">Aiur d.o.o.</a> Serbia</span>
+                    <span>of <a href="http://aiur.co.rs/">Aiur d.o.o.</a> Serbia</span>
                   </div>
                 </div>
                 <div class="j-archives archives">
