fixed another buggy link

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -73,7 +73,7 @@
           <li><a href="mailto:me@aatiis.me" rel="me">contact</a></li>
         </ul>
         <span>Pages created using <a href="http://github.com/mojombo/jekyll">jekyll</a>.</span>
-        <span>Styled using <a href="http://github.com/cloudhead/less.js">less.js</a> &amp; <a href="http://wiki.github.com/stubbornella/oocss/grids">oocss grids</a>.</span>
+        <span>Styled using <a href="http://github.com/cloudhead/less.js">less.js</a> &amp; <a href="http://github.com/stubbornella/oocss">oocss grids</a>.</span>
         <span>Hosted by <a href="http://github.com/">GitHub</a>.</span>
       </div>
     </div>
