--- a/_includes/links-me.html
+++ b/_includes/links-me.html
@@ -19,6 +19,7 @@
   <li class="os"><a rel="me" href="http://wiki.openstreetmap.org/wiki/User:Attila_Ol%C3%A1h" title="OpenStreetMap"></a></li>
   <li class="or"><a rel="me" href="http://www.orkut.com/Profile?uid=16972971993243567264" title="Orkut"></a></li>
   <li class="pi"><a rel="me" href="http://picasaweb.google.com/attilaolah" title="Picasa"></a></li>
+  <li class="re"><a rel="me" href="http://www.reddit.com/user/aatiis/" title="reddit"></a></li>
   <li class="sf"><a rel="me" href="http://serverfault.com/users/31991/attila-olah" title="Server Fault"></a></li>
   <li class="so"><a rel="me" href="http://careers.stackoverflow.com/aatiis" title="Stack Overflow Careers"></a></li>
   <li class="so"><a rel="me" href="http://stackoverflow.com/users/252239/attila-olah" title="Stack Overflow"></a></li>
