--- a/media/css/main.css
+++ b/media/css/main.css
@@ -640,6 +640,12 @@ body > .wrapper > .container > .content .sidebar > .me > ul > .id {
 body > .wrapper > .container > .content .sidebar > .me > ul > .id:hover, body > .wrapper > .container > .content .sidebar > .me > ul .id:active {
   background: url(/media/images/skin/social.png) no-repeat scroll -432px top transparent;
 }
+body > .wrapper > .container > .content .sidebar > .me > ul > .re {
+  background: url(/media/images/skin/social.png) no-repeat scroll -448px -16px transparent;
+}
+body > .wrapper > .container > .content .sidebar > .me > ul > .re:hover, body > .wrapper > .container > .content .sidebar > .me > ul .re:active {
+  background: url(/media/images/skin/social.png) no-repeat scroll -448px top transparent;
+}
 body > .wrapper > .container > .content .sidebar > .me > ul > li {
   display: inline-block;
   list-style-type: none;
