--- a/media/css/main.less
+++ b/media/css/main.less
@@ -342,6 +342,7 @@ body {
               > .xi { ._i(25); } > .xi:hover, .xi:active { ._h(25); }
               > .or { ._i(26); } > .or:hover, .or:active { ._h(26); }
               > .id { ._i(27); } > .id:hover, .id:active { ._h(27); }
+              > .re { ._i(28); } > .re:hover, .re:active { ._h(28); }
               > li {
                 display: inline-block;
                 list-style-type: none;
