--- a/media/css/main.less
+++ b/media/css/main.less
@@ -343,6 +343,7 @@ body {
               > .or { ._i(26); } > .or:hover, .or:active { ._h(26); }
               > .id { ._i(27); } > .id:hover, .id:active { ._h(27); }
               > .re { ._i(28); } > .re:hover, .re:active { ._h(28); }
+              > .fl { ._i(29); } > .fl:hover, .fl:active { ._h(29); }
               > li {
                 display: inline-block;
                 list-style-type: none;
