updated the footer

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -67,9 +67,9 @@
       </div>
       <div class="footer">
         <ul>
-          <li>&copy; 2010. Licensed under a <a href="http://creativecommons.org/licenses/by/3.0/" rel="license">Creative Commons Attribution 3.0 Unported License</a>.</li>
+          <li>&copy; 2011. Licensed under a <a href="http://creativecommons.org/licenses/by/3.0/" rel="license">Creative Commons Attribution 3.0 Unported License</a>.</li>
           <li><a href="/">home</a></li>
-          <li><a href="http://github.com/aatiis" rel="me">me @ github</a></li>
+          <li><a href="https://github.com/aatiis" rel="me">me @ github</a></li>
           <li><a href="mailto:me@aatiis.me" rel="me">contact</a></li>
         </ul>
         <span>Pages created using <a href="http://github.com/mojombo/jekyll">jekyll</a>.</span>
