--- a/media/css/main.less
+++ b/media/css/main.less
@@ -186,6 +186,9 @@ body {
                 border-left: 2px solid #888;
               }
             }
+            blockquote + p {
+              margin-right: 0.5em;
+            }
             .img {
               padding: 5px;
             }
