added GitHub blog

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -47,9 +47,10 @@
                 <div class="blogs">
                   <div class="header">Worth checking out</div>
                   <ul>
+                    <li><a href="https://github.com/blog/">The GitHub Blog</a></li>
                     <li><a href="http://blog.notdot.net/">Nick's Blog</a></li>
-                    <li><a href="http://www.codinghorror.com/blog/">Coding Horror</a></li>
                     <li><a href="http://37signals.com/svn/">Signal vs. Noise</a></li>
+                    <li><a href="http://www.codinghorror.com/blog/">Coding Horror</a></li>
                     <li><a href="http://www.stubbornella.org/">Stubbornella</a></li>
                     <li><a href="http://www.spoiledmilk.dk/blog/">SpoiledMilk Blog</a></li>
                     <li><a href="http://richardneililagan.com/">Richard Neil Ilagan</a></li>
