changed the title

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8"/>
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="/media/css/main-min.css" type="text/css"/>
-    <link rel="alternate" type="application/rss+xml" title="Attila O.'s weblog" href="http://feeds.feedburner.com/aatiisme"/>
+    <link rel="alternate" type="application/rss+xml" title="Attila O. on code" href="http://feeds.feedburner.com/aatiisme"/>
     <script src="/media/js/ajs-min.js"></script>
   </head>
   <body>
     <div class="wrapper">
       <div class="header">
-        <h1 class="title"><a href="/">Attila O.'s weblog</a></h1>
+        <h1 class="title"><a href="/">Attila O. on code</a></h1>
         <div class="flower"></div>
         <div class="j-canvas canvas"></div>
         <div class="grass"></div>
