--- a/media/css/main.less
+++ b/media/css/main.less
@@ -42,7 +42,7 @@ html,
 body {
   border: none;
   color: #000;
-  font: 14px/150% 'Lucida Grande','Lucida Sans Unicode','Geneva','Verdana',sans-serif;
+  font: 14px/150% 'Ubuntu','Lucida Grande','Lucida Sans Unicode','Geneva','Verdana',sans-serif;
   height: 100%;
   margin: 0;
   padding: 0;
@@ -352,7 +352,7 @@ body {
                 list-style-type: none;
                 margin: 2px;
                 opacity: 0.33;
-                filter:alpha(opacity=33);
+                // filter: alpha(opacity=33); // syntax error?
                 // "Transition"
                 -webkit-transition-property: opacity;
                 -webkit-transition-duration: 1s;
@@ -371,7 +371,7 @@ body {
               }
               > li:hover, li:active {
                 opacity: 1;
-                filter:alpha(opacity=100);
+                // filter: alpha(opacity=100); // syntax error?
                 // "Transition"
                 -webkit-transition-property: opacity;
                 -webkit-transition-duration: 1s;
